<resources>
    <string name="app_name">Pum Indomaret</string>
    <string name="hint_to_sign_up">Need Account? Register Here</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="password">Password</string>
    <string name="nik">NIK</string>
    <string name="hint_to_sign_in">Already have an Account?\nClick to Login</string>
    <string-array name="data_title_home">
        <item>Request</item>
        <item>Approval</item>
        <item>Status</item>
        <item>Response</item>
        <item>Setting</item>
        <item>Report</item>
    </string-array>
    <string name="err_nik">NIK can\'t be empty</string>
    <string name="err_password">Password can\'t be empty</string>
    <string name="request">Request</string>
    <string name="approval">Approval</string>
    <string name="inbox">Inbox</string>
    <string name="response">Response</string>
    <string name="setting">Setting</string>
    <string name="report">Report</string>
    <string name="example_name">Name</string>
    <string name="example_nip">Emp Num</string>
    <string name="example_position">My Position</string>
    <string name="err_null_pin">PIN can\'t be empty</string>
    <string name="err_pin">PIN must be 6 digits number</string>
    <string name="report_type">Report type</string>
    <string name="pum_creation_start">Pum creation start date</string>
    <string name="pum_creation_end">Pum creation end date</string>
    <string name="validation_start_date">Validation Start Date</string>
    <string name="validation_end_date">Validation End Date</string>
    <string name="pum_status">Pum Status</string>
    <string name="responsibility_status">Responsibility Status</string>
    <string name="group_by">Group by</string>
    <string name="number_zero">0</string>
    <string name="number_one">1</string>
    <string name="number_two">2</string>
    <string name="number_three">3</string>
    <string name="number_four">4</string>
    <string name="number_five">5</string>
    <string name="number_six">6</string>
    <string name="number_seven">7</string>
    <string name="number_eight">8</string>
    <string name="number_nine">9</string>
    <string name="btn_clear">C</string>
    <string name="btn_backspace">Back</string>
    <string name="please_enter_your_pin">Please Enter Your PIN</string>
    <string name="pin">PIN</string>
    <string name="trx_number">Trx Number</string>
    <string name="example_trx_number">200100300/107/2019</string>
    <string name="status">Status</string>
    <string name="create_responsibility">Create Responsibility</string>
    <string name="pum_number">PUM Number</string>
    <string name="transaction_type">Transaction Type</string>
    <string name="example_transaction_type">Stores Needs 1</string>
    <string name="description">Description</string>
    <string name="reason_reject">Reason of Reject</string>
    <string name="example_description">This Description will be appear in this field . . .</string>
    <string name="example_reason">This Reason will be appear in this field . . .</string>
    <string name="amount">Amount</string>
    <string name="example_amount">Rp 40.000.000</string>
    <string name="amount_remaining">Amount Remaining</string>
    <string name="full">Full</string>
    <string name="partial">Partial</string>
    <string name="store_code">Store Code</string>
    <string name="pdf_jpg_png">(pdf, jpg, png)</string>
    <string name="upload_file">Upload File</string>
    <string name="add">Add</string>
    <string name="response_cart">Response Cart</string>
    <string name="example_store_code">IDM123</string>
    <string name="cancel">Cancel</string>
    <string name="create_pum">Create Pum</string>
    <string name="create_another_response">Create another response</string>
    <string name="partial_response_sent">Partial Response Sent !</string>
    <string name="full_response_sent">Full Response Sent !</string>
    <string name="you_have_successfully_sent_partial_responsibility">You have successfully sent \n Partial Responsibility</string>
    <string name="you_have_successfully_sent_full_responsibility">You have successfully sent \n Full Responsibility</string>
    <string name="partial_response_added">Partial Response Added !</string>
    <string name="you_have_successfully_added_partial_responsibility">You have successfully added  \nPartial Responsibility</string>
    <string name="you_have_successfully_added_full_responsibility">You have successfully added \nFull Responsibility</string>
    <string name="view_response_cart">View Response Cart</string>
    <string name="add_another_response">Add another Response</string>
    <string name="full_response_added">Full Response Added !</string>
    <string name="history">History</string>
    <string name="responsibility_number">Responsibility Number</string>
    <string name="responsibility_date">Responsibility Date</string>
    <string name="example_date">20-08-2019</string>
    <string name="file_uploaded">File Uploaded</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="choose_file_from">Choose file from</string>
    <string name="waiting">Waiting</string>
    <string name="search_by_pum_number">Search by Pum Number</string>
    <string name="detail">Detail</string>
    <string name="example_pum_number">200100300</string>
    <string name="trx_date">Trx Date</string>
    <string name="department">Department</string>
    <string name="use_date">Use Date</string>
    <string name="resp_date">Resp Date</string>
    <string name="approval_1">Approval 1:</string>
    <string name="approval_2">Approval 2:</string>
    <string name="approval_3">Approval 3:</string>
    <string name="approval_4">Approval 4:</string>
    <string name="approval_5">Approval 5:</string>
    <string name="err_server">Server Busy</string>
    <string name="err_internet">No Internet Connection</string>
    <string name="reject">Reject</string>
    <string name="approve">Approve</string>
    <string name="search">Search</string>
    <string name="pum_requester">Pum Requester</string>
    <string name="delete">Delete</string>
    <string name="filter">Filter</string>
    <string name="note">Note :</string>
    <string name="a">-</string>
    <string name="note_approval_filter">* The selected transaction period only 31 days.</string>
    <string name="trx_start_date">Trx Start Date</string>
    <string name="trx_until_date">Trx Until Date</string>
    <string name="trx_status">Trx Status</string>
    <string name="message_dialog_approve">Are sure want to Approve all selected Requests ?</string>
    <string name="message_dialog_approve_single">Are sure want to Approve this selected Request ?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="message_dialog_reject">Are you sure want to Reject all selected Requests ?</string>
    <string name="message_dialog_reject_single">Are you sure want to Reject this selected Request ?</string>
    <string name="hint_dialog_reject">Read the reason validation</string>
    <string name="title_request_approved">Request Approved</string>
    <string name="you_have_successfully_approve_pum_request">You have successfully approve PUM request</string>
    <string name="view_approval_history">View Approval History</string>
    <string name="title_request_rejected">Request Rejected !</string>
    <string name="you_have_successfully_reject_pum_request">You have successfully reject PUM request</string>
    <string name="change_photo">Change Photo</string>
    <string name="change_pin">Change PIN</string>
    <string name="enter_current_pin">Enter Current PIN</string>
    <string name="confirm_new_pin">Confirm new PIN</string>
    <string name="enter_new_pin">Enter new PIN</string>
    <string name="logout">Logout</string>
    <string name="warning_31days">* The selected transaction period is only 31 days.</string>
    <string name="search_department">Search Department</string>
    <string name="transaction">Transaction</string>
    <string name="employee_name">Employee Name</string>
    <string name="next">Next</string>
    <string name="employee">Employee</string>
    <string name="please_input_date">Please input date</string>
    <string name="please_input_dept">Please input department</string>
    <string name="document">Document</string>
    <string name="doc_number">Doc Number</string>
    <string name="doc_date">Doc Date</string>
    <string name="doc_type">Doc Type</string>
    <string name="search_by_document">Search by Document</string>
    <string name="searchbydocnum">Search by Doc num</string>
    <string name="search_trx">Search TRX</string>
    <string name="fund">Fund</string>
    <string name="select_a_file">Select a File</string>
    <string name="example_error_amount_request">Your max amount request is Rp 50.000.000</string>
    <string name="rp">Rp</string>
    <string name="emp_dept">Emp Dept</string>
    <string name="trx_type">Trx Type</string>
    <string name="oops_your_pin_in_incorrect">Your Pin is Incorrect</string>
    <string name="you_have_successfully_created_pum_request">You have successfully created PUM Request</string>
    <string name="view_request">View Request</string>
    <string name="back_to_home">Back to Home</string>
    <string name="request_sent">Request Sent !</string>
    <string name="request_approved">Request Approved !</string>
    <string name="request_rejected">Request Rejected !</string>
    <string name="request_rejected_desc">You have successfully reject PUM Request</string>
    <string name="request_approved_note">You have successfully approve PUM Request</string>
    <string name="download_failed">Download Failed</string>
    <string name="download_success">Download Success</string>
    <string name="notification_error_ssl_cert_invalid">Not Secure Connection</string>
    <string name="something_wrong">Something Wrong</string>
    <string name="change_pin_success">Pin Successfully Changed !</string>
    <string name="change_pin_success_text">Please Remember and keep your Pin Secrecy</string>
    <string name="step1">Step 1 of 3</string>
    <string name="step2">Step 2 of 3</string>
    <string name="step3">Step 3 of 3</string>
    <string name="Document">Document</string>
    <string name="DocNum">Doc Number</string>
    <string name="Fund">Fund</string>
    <string name="Validation">Validation</string>
    <string name="pin_really">to make sure that\'s really you</string>
    <string name="enter_your_pin">Enter Your PIN</string>
    <string name="view">view</string>
    <string name="reset">reset</string>
    <string name="use_date_greater_than_resp_date">Use date cannot be greater than resp date</string>
    <string name="you_have_not_selected_transaction_type">You have not selected the transaction type</string>
    <string name="your_desc_is_empty">Your description is empty</string>
    <string name="your_amount_is_empty">Your amount is empty</string>
    <string name="your_file_is_empty">Your file is empty</string>
    <string name="you_have_not_selected_store_code">You have not selected store code</string>
    <string name="data_is_empty">Data is Empty</string>
    <string name="submit">submit</string>
    <string name="new_text">New</string>
    <string name="partial_text">Partial</string>
    <string name="full_text">Full</string>
    <string name="approved_text">Approved</string>
    <string name="invoice_text">Invoiced</string>
    <string name="nik_demo">2004002419</string>
    <string name="pass_demo">123456</string>
    <string name="pass_star">*</string>
</resources>