<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:paddingTop="@dimen/dp12"
        android:paddingBottom="@dimen/dp12"
        android:text="@string/please_enter_your_pin"
        android:fontFamily="@font/montserrat_semibold"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:maxLines="1"/>

    <EditText
        android:id="@+id/field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/pin_border_bg"
        android:enabled="false"
        android:maxLength="6"
        android:minHeight="36dp"
        android:textAlignment="center"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@android:color/black"
        android:textSize="32sp"
        android:inputType="text"
        tools:ignore="Autofill,LabelFor" />

    <TableLayout
        android:id="@+id/keyboard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:orientation="vertical">

        <TableRow style="@style/keyboard_row">

            <TextView
                android:id="@+id/t9_key_1"
                style="@style/keyboard_number_button"
                android:fontFamily="@font/montserrat_regular"
                android:text="@string/number_one" />

            <TextView
                android:id="@+id/t9_key_2"
                style="@style/keyboard_number_button"
                android:fontFamily="@font/montserrat_regular"
                android:text="@string/number_two" />

            <TextView
                android:id="@+id/t9_key_3"
                style="@style/keyboard_number_button"
                android:fontFamily="@font/montserrat_regular"
                android:text="@string/number_three" />
        </TableRow>

        <TableRow style="@style/keyboard_row">

            <TextView
                android:id="@+id/t9_key_4"
                style="@style/keyboard_number_button"
                android:fontFamily="@font/montserrat_regular"
                android:text="@string/number_four" />

            <TextView
                android:id="@+id/t9_key_5"
                style="@style/keyboard_number_button"
                android:fontFamily="@font/montserrat_regular"
                android:text="@string/number_five" />

            <TextView
                android:id="@+id/t9_key_6"
                style="@style/keyboard_number_button"
                android:fontFamily="@font/montserrat_regular"
                android:text="@string/number_six" />
        </TableRow>

        <TableRow style="@style/keyboard_row">

            <TextView
                android:id="@+id/t9_key_7"
                style="@style/keyboard_number_button"
                android:fontFamily="@font/montserrat_regular"
                android:text="@string/number_seven" />

            <TextView
                android:id="@+id/t9_key_8"
                style="@style/keyboard_number_button"
                android:fontFamily="@font/montserrat_regular"
                android:text="@string/number_eight" />

            <TextView
                android:id="@+id/t9_key_9"
                style="@style/keyboard_number_button"
                android:fontFamily="@font/montserrat_regular"
                android:text="@string/number_nine" />
        </TableRow>

        <TableRow style="@style/keyboard_row">

            <TextView
                android:id="@+id/t9_key_clear"
                style="@style/keyboard_number_button"
                android:fontFamily="@font/montserrat_regular"
                android:text="@string/btn_clear" />

            <TextView
                android:id="@+id/t9_key_0"
                style="@style/keyboard_number_button"
                android:fontFamily="@font/montserrat_regular"
                android:text="@string/number_zero" />

            <ImageView
                android:id="@+id/t9_key_backspace"
                style="@style/keyboard_button"
                android:src="@drawable/ic_backspace_black_18dp"
                tools:ignore="ContentDescription" />

        </TableRow>
    </TableLayout>

</LinearLayout>