<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/main_padding"
    android:layout_marginBottom="@dimen/main_margin"
    android:background="@drawable/bg_rounded_border_black_solid_black"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/responsibility_number"
        android:fontFamily="@font/mbold"
        style="@style/TextAppearance.caption.Dark"/>

    <TextView
        android:id="@+id/tvResponsibilityNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/example_trx_number"
        android:fontFamily="@font/mregular"
        android:layout_marginStart="@dimen/dp6"
        style="@style/TextAppearance.Headline6.Dark"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/responsibility_date"
        android:fontFamily="@font/mbold"
        android:layout_marginTop="@dimen/min_margin"
        style="@style/TextAppearance.caption.Dark"/>

    <TextView
        android:id="@+id/tvDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/example_date"
        android:fontFamily="@font/mregular"
        android:layout_marginStart="@dimen/dp6"
        style="@style/TextAppearance.Headline6.Dark"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/amount"
        android:fontFamily="@font/mbold"
        android:layout_marginTop="@dimen/min_margin"
        style="@style/TextAppearance.caption.Dark"/>

    <TextView
        android:id="@+id/tvAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/example_amount"
        android:fontFamily="@font/mregular"
        android:layout_marginStart="@dimen/dp6"
        style="@style/TextAppearance.Headline6.Dark"/>

</LinearLayout>