<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/gradient_top_blue"
    android:gravity="center"
    android:padding="@dimen/main_padding"
    tools:context=".features.response.subfeatures.fullresponseadded.FullResponseAddedActivity">

    <ImageView
        android:layout_width="220dp"
        android:layout_height="220dp"
        android:src="@drawable/checklist_green"
        android:scaleType="centerCrop"
        android:layout_marginBottom="80dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/full_response_added"
        style="@style/TextAppearance.Headline5.Light"
        android:textStyle="bold"
        android:layout_marginBottom="14dp"/>

    <TextView
        android:id="@+id/tvDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/you_have_successfully_added_full_responsibility"
        style="@style/TextAppearance.Body1.Light"
        android:textAlignment="center"
        android:layout_marginBottom="32dp"/>

    <Button
        android:id="@+id/btnViewResponseCart"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:text="@string/view_response_cart"
        android:background="@drawable/bg_rounded_blue"
        android:textAllCaps="false"
        style="@style/TextAppearance.Headline6.Light"
        android:layout_marginBottom="@dimen/main_margin"/>

    <Button
        android:id="@+id/btnAddAnotherResponse"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:text="@string/add_another_response"
        android:background="@drawable/bg_rounded_blue"
        android:textAllCaps="false"
        style="@style/TextAppearance.Headline6.Light"
        android:layout_marginBottom="62dp"/>

</LinearLayout>